<resources>
    <string name="app_name">Korrika Laguntza</string>
    <string name="guardarSalir">Guardar y salir</string>
    <string name="defaultName">Nombre</string>
    <string name="addAceptar">Aceptar</string>
    <string name="detallesAceptar">Aceptar</string>
    <string name="detallesBorrar">Borrar</string>
    <string name="dFotoDesc">Foto de la actividad</string>
    <string name="mAñadir">Añadir Elemento</string>
    <string name="seleccionarIdioma">Selecciona tu idioma</string>
    <string name="idiomaEspañol">Español</string>
    <string name="idiomaIngles">Inglés</string>
    <string name="idiomaEuskera">Euskera</string>
    <string name="seleccionarTema">Selecciona el tema</string>
    <string name="temaClaro">Claro</string>
    <string name="temaOscuro">Oscuro</string>
    <string name="temaAzul">Azul</string>
    <string name="temaRojo">Rojo</string>
    <string name="addButton">Añadir actividad</string>
    <string name="distancia_label">Distancia</string>
    <string name="tiempo_label">Tiempo</string>
    <string name="descripcion_hint">Descripción</string>
    <string name="km_hint">km</string>
    <string name="notificacionAñadida">Actividad añadida</string>
    <string name="notificacionDesc">Se ha añadido una nueva actividad</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="borrar">Borrar"</string>
    <string name="opciones">Opciones</string>
    <string name="errorNombre">El titulo de la actividad no puede estar vacío</string>
    <string name="errorUser">El nombre de usuario no puede estar vacío</string>
    <string name="errorPassword">La contraseña no puede estar vacía</string>
    <string name="errorLogin">Usuario o contraseña incorrectos</string>
    <string name="errorRegister">Este usuario ya existe</string>
    <string name="borrar_actividad">¿Estás seguro de que quieres borrar esta actividad?</string>
    <string name="perfil">Perfil</string>
    <string name="login">Iniciar sesión</string>"
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Añadir widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="tiempo">tiempo</string>
    <string name="distancia">distancia</string>
    <string name="ultima_actividad">ÚLTIMA ACTIVIDAD</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="distanciaTot">Distancia total:</string>
    <string name="tiempotot">Tiempo total:</string>
</resources>