<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesActivity">

    <fragment
        android:id="@+id/fragmentoMapa"
        android:name="com.example.das_entrega_1.MapaFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/defaultName"
        android:hint="@string/defaultName"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentoMapa" />

    <TextView
        android:id="@+id/dText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/distancia_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreInput" />

    <EditText
        android:id="@+id/kmInput"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/km_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dText" />

    <TextView
        android:id="@+id/tiempoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tiempo_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kmInput" />

    <LinearLayout
        android:id="@+id/tiempoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiempoLabel">

        <EditText
            android:id="@+id/horasInput"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="hh"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/minutosInput"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="mm"
            android:inputType="number" />
    </LinearLayout>

    <EditText
        android:id="@+id/descripcionInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="top"
        android:hint="@string/descripcion_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tiempoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kmInput"
        app:layout_constraintTop_toTopOf="@+id/dText" />

    <Button
        android:id="@+id/Aceptarbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addAceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiempoLayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/BorrarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="@+id/Aceptarbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Aceptarbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>